' java.exe -jar C:\Apps\bin\plantuml.jar .\docs\app_configuration.puml

@startuml
title Application Configuration Class Diagram
caption A diagram representing the configuration and singleton classes.

class ConfigurationError {
    + __init__(self)
}

class SingletonMeta {
    - weakref.WeakValueDictionary _instances
    - threading.Lock _lock
    + __call__(cls, *args, **kwargs)
    + reset_instance(cls)
}

class ConfigLoader {
    - threading.RLock _lock
    - dict _config
    - Optional[str] _file_path
    + __init__(self, file_path, raw_config)
    + _validate_config(config)
    + reload()
    + config
}

class AppConfiguration {
    - threading.RLock _lock
    - ConfigLoader _loader
    + __init__(self, configuration_json_file_path, raw_config)
    + reload()
    + get(path, default, raise_on_missing)
    + contains(path)
    + reset_instance()
}

SingletonMeta <|-- AppConfiguration
ConfigLoader <|-- AppConfiguration
ConfigurationError <-- ConfigLoader : raises
ConfigurationError <-- AppConfiguration : raises

@enduml
